First somehow working new gui